done with html and a few css styles

--- a/index.html
+++ b/index.html
@@ -4,10 +4,43 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>weather forecast</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     
+
+    <div class="container">
+        <p class="title">Know your World</p>
+        <div class="weather-div">
+            <div class="giphy"><img src="/20231203122140_IMG_9919_resized.JPG" alt=""></div>
+            <div class="row1">
+                <p class="date">
+                    4/21
+                </p>
+                <div class="temp-div">
+                    <p class="temp">
+                        25
+                    </p>
+                    <div class="city">
+                        <p class="city-name">Nairobi</p>
+                        <p class="switch-temp">
+                            F
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="city-input-div">
+            <input type="text" id="city-input">
+        </div>
+        <p class="error-div">
+            invalid input
+        </p>
+    </div>
+
     <script src="app.js"></script>
+
 </body>
+
 </html>
