--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+
+    <div class="loading-anime">
+        <img src="Animation - 1714722649006.gif" alt="" srcset="">
+    </div>
     
 
     <div class="container">
@@ -29,13 +33,19 @@
                     </div>
                 </div>
             </div>
+            <div class="row2">
+                <p class="day">Monday</p>
+                <p class="condition-text">Partly Cloudy</p>
+            </div>
         </div>
 
         <div class="city-input-div">
-            <input type="text" id="city-input">
+            <input type="text" id="city-input" placeholder="Search City">
+            <span class="submit-btn">Search</span>
         </div>
+
         <p class="error-div">
-            invalid input
+
         </p>
     </div>
 
