change the cover photo to be geberic

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="container">
         <p class="title">Know your World</p>
         <div class="weather-div">
-            <div class="giphy"><img src="/20231203122140_IMG_9919_resized.JPG" alt=""></div>
+            <div class="giphy"><img src="/Rainy cloud linear icon.jpeg" alt=""></div>
             <div class="row1">
                 <p class="date">
                     4/21
